# forge-downloader

./: Cargo.toml
src/: complete_version.rs  download_utils.rs  forge_client_install.rs  lib.rs  main.rs  post_processors.rs  versions.rs
src/download_utils/: forge.rs  mod.rs  neoforge.rs
src/forge_installer_profile/: mod.rs  v1.rs  v2.rs
