[package]
name = "forge-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["json", "stream"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["full"] }
zip = "0.6.6"
chrono = { version = "0.4.31", features = ["serde"] }
sha1 = "0.10.6"
hex = "0.4.3"
regex = "1.10.2"
thiserror = "1.0.51"
futures = "0.3.29"
log = "0.4.20"
